# BigHeroX_Main_Code_Frame

./: .gitignore  2024Software section introduced.md  2024软件部分介绍.md  Cargo.toml  README.md
docs/: 入门教程：Git基础.md  入门教程：Rust基础.md  基于Bevy游戏引擎的开发方式.md  编译环境配置.md
scripts/: .gitignore  check_compile_environment.py  update_local.py  update_remote.py
scripts/base/: __init__.py
scripts/repo/: __init__.py
src/: coach.rs  data_legacy.rs  error.rs  field.rs  lib.rs  robot.rs  test_network_transfer.rs  traits.rs  ui_components.rs
src/field/: data.rs
src/robot/: com_mpu.rs  com_robot.rs  logic.rs  motion.rs  panorama_camera.rs  test_cpp.rs  test_network_legacy.rs  test_rust.rs  ui.rs
src/robot/com_mpu/: mpu_data.rs
src/robot/ui/: function.rs
src/ui_components/: button_effect.rs  input_area.rs
wasted/: async_fs.rs
